--- a/mini-crm-backend/package.json
+++ b/mini-crm-backend/package.json
@@ -12,9 +12,11 @@
   "description": "",
   "dependencies": {
     "body-parser": "^2.2.0",
+    "cors": "^2.8.5",
     "express": "^5.1.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/node": "^24.0.15",
     "nodemon": "^3.1.10",
